# DexterFirmware

./: README.md
.github/workflows/: pr.yml
AuxAVR/: CMakeLists.txt  avr_aux-config-version.cmake.in  avr_aux-config.cmake
AuxAVR/src/: CMakeLists.txt  asm-macros.h  build.h  csync_isr.s  protocol.c  protocol.h  serial.c  serial.h  serial_packet.c  serial_packet.h  strings.c  strings.h  util.s  v1.h  v2.h  v3.h  vbi_inject.c  vbi_inject.h
Bootloader/: CMakeLists.txt
Bootloader/scripts/: fuse_values.txt  write_328p.sh  write_328p_loop.sh  write_644p.sh  write_644p_loop.sh
Bootloader/src/: CMakeLists.txt  bootloader.c  platform.h  platform_aux.h  platform_main.h  program.c  program.h  protocol.c  protocol.h  serial.c  serial.h  strings.c  strings.h
MainAVR/: CMakeLists.txt  avr_main-config-version.cmake.in  avr_main-config.cmake
MainAVR/src/: CMakeLists.txt  autodetect-deps.c  autodetect-deps.h  autodetect.c  autodetect.h  buttons.c  buttons.h  common-asm.h  common-ldp.c  common-ldp.h  common.h  deferred_eeprom_write.c  deferred_eeprom_write.h  dexter_strings.c  disc_switch.c  disc_switch.h  idle.c  idle.h  ld700-callbacks.c  ld700-callbacks.h  ld700-common.h  ld700-main-asm.s  ld700-main-deps.c  ld700-main-deps.h  ld700-main-up-one-from-leaf.c  ld700-main-up-one-from-leaf.h  ld700-main.c  ld700-main.h  ldp1000-common.h  ldp1000-main-asm.s  ldp1000-main.c  ldp1000-main.h  ldp1000_callbacks.c  ldp1000_callbacks.h  ldp_stub.c  ldp_stub.h  ldv1000-common.h  ldv1000-main-asm.s  ldv1000-main.c  ldv1000-main.h  (+61 more)
Tests/: CMakeLists.txt  autodetect_deps_tests.cpp  autodetect_tests.cpp  ld700_deps_tests.cpp  ld700_firmware_tests.cpp  ld700_isr_tests.cpp  ld700_main_isr.c  ld700_main_isr.h  ld700_main_up_one_from_leaf_tests.cpp  mocks.h  mull.yml  stdafx.h
Tests/avr/: interrupt.h  io.cpp  io.h
Tests/ldp-abst/: ldpc.h
Tests/ldp-in/: ld700-interpreter.h
Tests/mockImplementations/: mockAutodetectDeps.cpp  mockAutodetectDeps.h  mockCommonLdp.cpp  mockCommonLdp.h  mockDiscSwitch.cpp  mockDiscSwitch.h  mockIdle.cpp  mockIdle.h  mockLD700Callbacks.cpp  mockLD700Callbacks.h  mockLD700Deps.cpp  mockLD700Deps.h  mockLdpc.cpp  mockLdpc.h  mockProtocol.cpp  mockProtocol.h  mockSettings.cpp  mockSettings.h  mockStrings.cpp  mockStrings.h  mockTimerGlobal.cpp  mockTimerGlobal.h
ci/: Jenkinsfile.generic
